<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.bmicalculator.MainActivity">
    <!--
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/navHomeMenuItem" />
    -->
    <item
        android:id="@+id/nav_bmi"
        android:icon="@drawable/ic_bmi_black_24dp"
        android:title="@string/navBmiMenuItem" />

    <item
        android:id="@+id/nav_calories"
        android:icon="@drawable/ic_calories_24dp"
        android:title="@string/navCaloriesMenuItem" />
    <item
        android:id="@+id/nav_recipe"
        android:icon="@drawable/ic_recipe_24dp"
        android:title="@string/navRecipeMenuItem"/>
    <item
        android:id="@+id/nav_chart"
        android:icon="@drawable/ic_chart_black_24dp"
        android:title="@string/navChartMenuItem"/>
    <item
        android:id="@+id/nav_game"
        android:icon="@drawable/ic_game_black_24dp"
        android:title="@string/navGameMenuItem"/>
</menu>
